--- a/index.css
+++ b/index.css
@@ -1,75 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid rgb(0, 0, 0);
-}
-
-.logo{
-    width: 90px;
-}
-
-.nav-items ul{
-    display: flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-
-.nav-items ul li{
-    padding: 4px;
-    margin-right: 20px;
-}
-
-.filter{
-    display: flex;
-    margin: 10px;
-}
-
-.filter-btn{
-    margin-left: 20px;
-    cursor: pointer;
-}
-
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card{
-    padding: 5px;
-    margin: 20px;
-    width: 200px;
-    background-color: #f0f0f0;
-}
-
-.res-card:hover{
-    cursor: pointer;   
-    border: 1px solid black;
-}
-
-.res-card h4, h6 {
-    margin-bottom: 10px;
-  }
-
-.food-img{
-    width: 100%;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card{
-    background-color: #ececec;
-    width: 200px;
-    height: 300px;
-    padding: 5px;
-    margin: 20px;
-}
-
-.login-btn{
-    margin-right: 10px;
-    font-weight: bold;
-    cursor: pointer;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
